--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main class="container">
       <picture>
         <source
-          media="(min-width: 375px"
+          media="(min-width: 375px)"
           srcset="./images/image-product-desktop.jpg"
           alt="Desktop Image"
           class="desktop-image"
