--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           class="mobile-image"
           src="./images/image-product-mobile.jpg"
           alt="Perfume Bottle"
-          width="375px"
+          width="375"
         />
       </picture>
       <section class="details-container">
